--- a/HAW_Tool/Window1.xaml
+++ b/HAW_Tool/Window1.xaml
@@ -2,19 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:haw="clr-namespace:HAW_Tool.HAW"
-    xmlns:local="clr-namespace:HAW_Tool"
-    xmlns:lh="clr-namespace:LittleHelpers;assembly=LittleHelpers"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:wpf="clr-namespace:HAW_Tool.WPF"
+    xmlns:local="clr-namespace:HAW_Tool" xmlns:wpf="clr-namespace:HAW_Tool.WPF"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" 
-    xmlns:ic="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions" 
-    xmlns:SeveQsCustomControls="clr-namespace:SeveQsCustomControls;assembly=SeveQsCustomControls"
-    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
-    xmlns:il="clr-namespace:Microsoft.Expression.Interactivity.Layout;assembly=Microsoft.Expression.Interactions" 
-    xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" 
-    xmlns:Custom="http://schemas.microsoft.com/wpf/2008/toolkit" 
+    mc:Ignorable="d" xmlns:SeveQsCustomControls="clr-namespace:SeveQsCustomControls;assembly=SeveQsCustomControls"
     xmlns:Cvt="clr-namespace:HAW_Tool.Converters"
     xmlns:k="clr-namespace:Kingsmill.Windows"
     x:Class="HAW_Tool.Window1" 
@@ -24,12 +15,6 @@
     ResizeMode="NoResize"
     k:WindowSettings.Save="True" MinWidth="800" MinHeight="400">
     <Window.Resources>
-        <Storyboard Completed="TabFadeCompleted" x:Name="tabFadeStoryboard" x:Key="tabFadeStoryboard" Duration="00:00:01">
-            <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="tabFadeBorder" Storyboard.TargetProperty="Opacity">
-                <SplineDoubleKeyFrame Value="1.0" KeyTime="00:00:00" KeySpline="1,0,0,1" />
-                <SplineDoubleKeyFrame Value="0.0" KeyTime="00:00:01" KeySpline="1,0,0,1" />
-            </DoubleAnimationUsingKeyFrames>
-        </Storyboard>
         <haw:EventItemTemplateSelector x:Key="EventItemTemplateSelector" />
         <Cvt:EncodingConverter x:Key="EncodingCvt" />
 
@@ -55,6 +40,65 @@
                 <HeaderedContentControl Template="{StaticResource HeaderedTextBlock}" Header="neuer Wert : " Content="{Binding NewValue}" FontFamily="Courier New" />
             </StackPanel>
         </HierarchicalDataTemplate>
+
+        <DataTemplate x:Key="MetroEventTemplate">
+            <Canvas Background="{x:Null}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Grid DataContext="{Binding}" Margin="0 15 0 0">
+                    <Canvas.Top>
+                        <MultiBinding Converter="{StaticResource TimeToTop}" ConverterParameter="RowIndex">
+                            <Binding Path="HasChanges" />
+                            <Binding />
+                        </MultiBinding>
+                    </Canvas.Top>
+                    <Canvas.Left>
+                        <MultiBinding Converter="{StaticResource TimeToLeft}">
+                            <Binding Path="HasChanges" />
+                            <Binding />
+                        </MultiBinding>
+                    </Canvas.Left>
+                    <Grid.Width>
+                        <MultiBinding Converter="{StaticResource TimeToWidth}">
+                            <Binding Path="HasChanges" />
+                            <Binding />
+                        </MultiBinding>
+                    </Grid.Width>
+                    <SeveQsCustomControls:StrikeOut Opacity="0.6" Panel.ZIndex="100" StrikeOutThickness="3.0" Visibility="Hidden" x:Name="strikeOut" />
+                    <Border x:Name="border" TextElement.FontSize="9" CornerRadius="0" BorderBrush="#76474747" BorderThickness="2,2,2,10" Background="#B2000000">
+                        <Grid MinHeight="{StaticResource EventMinHeight}">
+                            <Label x:Name="from" Content="{Binding From, Converter={StaticResource ShortTime}, Mode=Default}" Foreground="White" d:LayoutOverrides="Width, Height" VerticalAlignment="Center" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Padding="0" Margin="0" >
+                                <Label.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform/>
+                                        <SkewTransform/>
+                                        <RotateTransform Angle="-90"/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Label.RenderTransform>
+                            </Label>
+                            <Label x:Name="till" Content="{Binding Till, Converter={StaticResource ShortTime}, Mode=Default}" Foreground="White" d:LayoutOverrides="Width, Height" VerticalAlignment="Center" HorizontalAlignment="Right" RenderTransformOrigin="0.5,0.5" Padding="0" Margin="0" >
+                                <Label.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform/>
+                                        <SkewTransform/>
+                                        <RotateTransform Angle="-90"/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Label.RenderTransform>
+                            </Label>
+                            <Label x:Name="codeGross" Content="{Binding Code}" FontWeight="Bold" Foreground="#05FFFFFF" FontStretch="Expanded" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" />
+                            <Label x:Name="codeKlein" Content="{Binding Code}" FontWeight="Bold" Foreground="White" d:LayoutOverrides="Width, Height" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0" FontSize="10.667" />
+                            <Label Content="{Binding Tutor}" Foreground="White" d:LayoutOverrides="Width, Height" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0" FontSize="10.667" />
+                            <Label Content="{Binding Room}" Foreground="White" d:LayoutOverrides="Width, Height" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0" FontSize="10.667" />
+                            <StackPanel Margin="0,2,0,2" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top">
+                                <CheckBox ToolTip="Lokal ausblenden (findet satt, gehe aber nicht hin)"  Style="{StaticResource RedGreenBox}" IsChecked="{Binding IsEnabled}" />
+                                <CheckBox ToolTip="Veranstaltung findet gar nicht statt" Style="{StaticResource RedGreenBox}" IsChecked="{Binding TakesPlace}"/>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+
+                </Grid>
+            </Canvas>
+        </DataTemplate>
 
         <DataTemplate x:Key="EventItemTemplate">
             <Canvas Background="{x:Null}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -83,7 +127,8 @@
                             <VisualBrush Visual="{Binding ElementName=border}"/>
                         </Border.OpacityMask>
                     </Border>
-                    <Border x:Name="border" TextElement.FontSize="9" CornerRadius="2" BorderBrush="#76474747" BorderThickness="2,2,2,10" Background="#B2000000">
+                    <!--<Border x:Name="border" TextElement.FontSize="9" CornerRadius="2" BorderBrush="#76474747" BorderThickness="2,2,2,10" Background="#B2000000">-->
+                    <Border x:Name="border" TextElement.FontSize="9" CornerRadius="0" BorderBrush="#76474747" BorderThickness="2,2,2,10" Background="#B2000000">
                         <Grid MinHeight="{StaticResource EventMinHeight}">
                             <Label x:Name="from" Content="{Binding From, Converter={StaticResource ShortTime}, Mode=Default}" Foreground="White" d:LayoutOverrides="Width, Height" VerticalAlignment="Center" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Padding="0" Margin="0" >
                                 <Label.RenderTransform>
@@ -314,13 +359,16 @@
                         Padding="0,5,0,10" 
                         FullLineThickness="2" HalfLineThickness="1" QuarterLineThickness="0.5">
                         <SeveQsCustomControls:RasteredItemsControl.QuarterLineBrush>
-                            <SolidColorBrush Color="{DynamicResource LightenUp20}"/>
+                            <!--<SolidColorBrush Color="{DynamicResource LightenUp20}"/>-->
+                            <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
                         </SeveQsCustomControls:RasteredItemsControl.QuarterLineBrush>
                         <SeveQsCustomControls:RasteredItemsControl.HalfLineBrush>
-                            <SolidColorBrush Color="{DynamicResource LightenUp50}"/>
+                            <!--<SolidColorBrush Color="{DynamicResource LightenUp50}"/>-->
+                            <SolidColorBrush Color="{DynamicResource DarkenDown40}"/>
                         </SeveQsCustomControls:RasteredItemsControl.HalfLineBrush>
                         <SeveQsCustomControls:RasteredItemsControl.LineBrush>
-                            <SolidColorBrush Color="{DynamicResource LightenUp50}"/>
+                            <!--<SolidColorBrush Color="{DynamicResource LightenUp50}"/>-->
+                            <SolidColorBrush Color="{DynamicResource DarkenDown40}"/>
                         </SeveQsCustomControls:RasteredItemsControl.LineBrush>
                     </SeveQsCustomControls:RasteredItemsControl>
                 </Grid>
@@ -380,18 +428,22 @@
             <Grid d:DesignHeight="274.96" d:DesignWidth="788.377">
                 <SeveQsCustomControls:ResettingTabControl  Margin="0" x:Name="tabControl" ItemContainerStyle="{DynamicResource MainTabItemStyle}" Foreground="White" d:LayoutOverrides="VerticalAlignment">
                     <SeveQsCustomControls:ResettingTabControl.BorderBrush>
-                        <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
+                        <!--<SolidColorBrush Color="{DynamicResource DarkenDown20}"/>-->
+                        <SolidColorBrush Color="{DynamicResource DarkenDown40}"/>
                     </SeveQsCustomControls:ResettingTabControl.BorderBrush>
                     <SeveQsCustomControls:ResettingTabControl.Background>
-                        <SolidColorBrush Color="{DynamicResource LightenUp20}"/>
+                        <!--<SolidColorBrush Color="{DynamicResource LightenUp20}"/>-->
+                        <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
                     </SeveQsCustomControls:ResettingTabControl.Background>
                     <TabItem Header="Wochenübersicht" Foreground="White">
                         <SeveQsCustomControls:ResettingTabControl x:Name="CalWeek" SelectedItem="{Binding Current, Mode=OneTime}"  ItemsSource="{Binding CalendarWeeks}" ContentTemplate="{StaticResource SeminarGroupTemplate}" DataContext="{Binding SelectedItem, ElementName=SemGroups}" DisplayMemberPath="LabelShort" d:LayoutOverrides="Width" ItemContainerStyle="{DynamicResource MainTabItemStyle}" Foreground="White" Margin="0" Padding="0">
                             <SeveQsCustomControls:ResettingTabControl.Background>
-                                <SolidColorBrush Color="{DynamicResource LightenUp20}"/>
+                                <!--<SolidColorBrush Color="{DynamicResource LightenUp20}"/>-->
+                                <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
                             </SeveQsCustomControls:ResettingTabControl.Background>
                             <SeveQsCustomControls:ResettingTabControl.BorderBrush>
-                                <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
+                                <!--<SolidColorBrush Color="{DynamicResource DarkenDown20}"/>-->
+                                <SolidColorBrush Color="{DynamicResource DarkenDown40}"/>
                             </SeveQsCustomControls:ResettingTabControl.BorderBrush>
                         </SeveQsCustomControls:ResettingTabControl>
                     </TabItem>
@@ -408,11 +460,13 @@
                     <TabItem Header="Wochenzettel" BorderBrush="{x:Null}" Foreground="{Binding Foreground, ElementName=tabControl, Mode=Default}" Visibility="Collapsed">
                         <Grid>
                             <Grid.Background>
-                                <SolidColorBrush Color="{DynamicResource LightenUp20}"/>
+                                <!--<SolidColorBrush Color="{DynamicResource LightenUp20}"/>-->
+                                <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
                             </Grid.Background>
                             <TreeView x:Name="daysheet" ItemsSource="{Binding CalendarWeeks}" HorizontalAlignment="Left" Width="204" Margin="8,8,0,8" Foreground="White">
                                 <TreeView.Background>
-                                    <SolidColorBrush Color="{DynamicResource DarkenDown20}"/>
+                                    <!--<SolidColorBrush Color="{DynamicResource DarkenDown20}"/>-->
+                                    <SolidColorBrush Color="{DynamicResource DarkenDown40}"/>
                                 </TreeView.Background>
                                 <TreeView.ItemTemplate>
                                     <HierarchicalDataTemplate DataType="CalendarWeek" ItemsSource="{Binding Days}">
@@ -441,7 +495,6 @@
                 </UniformGrid>
             </Grid>
         </DataTemplate>
-        <ImageBrush x:Key="haw_tool_bg" ImageSource="Icons/haw_tool_bg.jpg"/>
     </Window.Resources>
     <Window.Title>
         <StaticResource ResourceKey="Title"/>
@@ -468,7 +521,7 @@
 
         <Border BorderBrush="Black" BorderThickness="4" Margin="4,4,4,4" Padding="0,0,0,8">
             <Border.Background>
-                <ImageBrush ImageSource="Icons/haw_tool_bg.jpg" Stretch="Fill"/>
+                <ImageBrush ImageSource="Icons/sky2.jpg" Stretch="Fill"/>
             </Border.Background>
             <Grid>
                 <SeveQsCustomControls:FramelessTitleBar DoubleClick="FramelessTitleBarDoubleClick" VerticalAlignment="Top" Foreground="White"/>
