--- a/HAW_Tool/Themes/Generic.xaml
+++ b/HAW_Tool/Themes/Generic.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:local="clr-namespace:HAW_Tool" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" xmlns:HAW_Tool_HAW="clr-namespace:HAW_Tool.HAW" xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero">
+    xmlns:local="clr-namespace:HAW_Tool" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" xmlns:HAW_Tool_HAW="clr-namespace:HAW_Tool.HAW" xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
+    xmlns:Native="clr-namespace:HAW_Tool.HAW.Native">
 
     <sys:Double x:Key="RasterH">90</sys:Double>
     <sys:Double x:Key="RasterV">60</sys:Double>
@@ -20,10 +21,10 @@
         </Setter>
     </Style>
 
-    <HAW_Tool_HAW:TimeToCoord x:Key="TimeToWidth" Multiplier="{StaticResource RasterH}" AsWidth="True" />
+    <Native:TimeToCoord x:Key="TimeToWidth" Multiplier="{StaticResource RasterH}" AsWidth="True" />
     <HAW_Tool_HAW:ToStringConverter x:Key="ShortTime" Format="{}{0:t}" />
-    <HAW_Tool_HAW:TimeToCoord x:Key="TimeToLeft" Multiplier="{StaticResource RasterH}" />
-    <HAW_Tool_HAW:TimeToCoord x:Key="TimeToTop" Multiplier="{StaticResource RasterV}" />
+    <Native:TimeToCoord x:Key="TimeToLeft" Multiplier="{StaticResource RasterH}" />
+    <Native:TimeToCoord x:Key="TimeToTop" Multiplier="{StaticResource RasterV}" />
     <BorderGapMaskConverter x:Key="BorderGapMaskConverter"/>
     <Style x:Key="HAWGroupBoxStyle" TargetType="{x:Type GroupBox}">
         <Setter Property="BorderBrush" Value="#D5DFE5"/>
